# inka

./: .dprint.json  .gitignore  .mypy.ini  CLAUDE.md  CONTRIBUTORS  Cargo.toml  README.md  justfile  package.json  pyproject.toml
.cursor/rules/: building.mdc  doc-organization.mdc  i18n.mdc  worktrees.mdc  writing-style.mdc
.github/rules/: building.md  worktrees.md
.github/workflows/: ci.yml  release.yml
content/tools/: _ai_path.py  ablation.py  annotate_community.py  apply_card_review.py  apply_figure_review.py  apply_giveaway_review.py  apply_pool_review.py  apply_review.py  assemble_bundle.py  audit_bundle_ai.py  author_card_gold.py  baselines.py  build_calibration_ruler.py  build_gr9677_gold.py  build_index.py  calibrate_verifier.py  check_figure_necessity.py  check_gencore.py  check_parity.py  check_technique_giveaway.py  coverage_report.py  crosscheck_keys.py  cursor_sandbox.py  eval_judge.py  eval_manifest.py  eval_metrics.py  eval_splits.py  eval_verifier.py  extract_constants.py  extract_omnibus_keys.py  extract_other_keys.py  extract_percentiles.py  fetch_cwru.py  fetch_revlog_sample.py  fill_confirmed.py  find_conversion.py  fix_decomp_giveaways.py  foundry.py  generate_content_set.py  generate_decompositions.py  (+48 more)
design/: .thumbnail  Cards.dc.html  Component Library Light.dc.html  Component Library.dc.html  Diagnostic Light.dc.html  Home.dc.html  Library Light.dc.html  Mobile Light.dc.html  Mobile.dc.html  SKILL.md  Settings Light.dc.html  Settings.dc.html  States Light.dc.html  Study Light.dc.html  Study.dc.html  claude-design-prompts.md  manifold.js  readme.md  styles.css  ux-foundation.md
design/claude-design/: Cards Light.dc.html  Diagnostic.dc.html  Home Light.dc.html  Library.dc.html  States.dc.html  Study Entry Light.dc.html  Study Entry.dc.html  ios-frame.jsx  manifold.js
design/guidelines/: brand-icons.html  colors-action.html  colors-neutrals-dark.html  colors-neutrals-light.html  colors-scores.html  colors-states.html  motion.html  shape.html  spacing.html  type-math.html  type-mono.html
design/prod/: pgrep-prototype.html
design/tokens/: colors.css  fonts.css  shape.css  typography.css
docs/pgrep/: dev-harness.md
docs_pgrep/: README.md
docs_pgrep/ai/: ai-layer.md  blueprint.md  cutoffs-and-baselines.md  gold-set-spec.md  heldout-and-leakage.md  slugs.md
docs_pgrep/contracts/: L2-api-contract.md  L3-sync-conflict-rule.md
docs_pgrep/paper/: main.tex  references.bib
docs_pgrep/plan/: 2026-07-06-card-sets-library-and-calibration-gate.md  2026-07-06-consolidation-and-antispam-design.md  2026-07-06-content-pipeline-triple-pool-design.md  2026-07-06-content-pipeline-triple-pool-plan.md  2026-07-06-l6-de-anki-plan.md  2026-07-06-l6-hosting-roadmap.md  2026-07-06-l6-production-de-anki-design.md  2026-07-06-l6-shell-profiles-login-handoff.md  2026-07-06-l6-structural-de-anki-design.md  2026-07-06-l6-structural-de-anki-plan.md  2026-07-07-engine-prune-design.md  (+46 more)
prod/: pgrep-prototype.html
qt/installer/app/: pyproject.toml
qt/installer/app/resources/: pgrep.icns
rslib/: Cargo.toml
rslib/ffi/: Cargo.toml  lib.rs
rslib/ffi/include/: anki_ffi.h  module.modulemap
tools/: .gitignore  build-manifold-webview.sh  build-mathjax-webview.sh  build-xcframework.sh  gen-sample-deck.py  gen-swift-protos.sh  ios-run.sh  ios-smoke.sh  ios-sync-proof.sh  pgrep-demo-sync.sh  pgrep-review  pgrep-sync-review  pgrep_bench.py  pgrep_content_audit.py  pgrep_crash_test.py  pgrep_eval_public.py  pgrep_figure_gen.py  pgrep_figure_verify.py  pgrep_math_convert.py  pgrep_synth.py  pgrep_wire_figures.py  run_figures.py  sync-server.py  web-watch
ts/: licenses.json
(+417 files in other folders)
