[package]
name = "anki-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "Anki's shared engine exposed over a thin C ABI (for iOS/mobile)"

[lib]
name = "anki_ffi"
crate-type = ["staticlib", "cdylib"]
path = "lib.rs"

[dependencies]
anki.workspace = true

[dev-dependencies]
anki_proto.workspace = true
prost.workspace = true
tempfile.workspace = true

[features]
rustls = ["anki/rustls"]
native-tls = ["anki/native-tls"]
