[project]
requires-python = ">=3.10"

# This project was generated with 0.3.26 using template: https://github.com/beeware/briefcase-template @ v0.3.26
[tool.briefcase]
project_name = "pgrep"
bundle = "net.ankiweb.pgrep"
url = "https://github.com/philote-dev/inka"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
author = "Damien Elmes"

[tool.briefcase.app.anki]
formal_name = "pgrep"
description = "A focused study app for the Physics GRE"
long_description = """pgrep is a focused study app for the Physics GRE. It runs on your own devices and syncs to a server you control."""
sources = [
  "src/anki",
]
icon = "resources/pgrep"
cleanup_paths = [
  # document_type icons
  "anki-*.ico",
  "**/anki-*.icns",
  # Qt WebEngine debug-symbol resources
  "**/*.debug.pak",
  "**/*.debug.bin",
  # Type-checker stubs / markers
  "**/*.pyi",
  "**/py.typed",
  # PyQt6 binding sources / API completion files
  "**/*.sip",
  "**/PyQt6/bindings/**/*.toml",
  "**/PyQt6/Qt6/qsci",
  # pywin32 dev/help bundles
  "**/PyWin32.chm",
  "**/pythonwin",
  "**/adodbapi",
  "**/isapi",
  "**/win32com/HTML",
  "**/win32com/demos",
  "**/win32com/makegw",
  "**/win32com/include",
  "**/win32com/libs",
  "**/win32com/readme.html",
  # Vendored test suites
  "**/test",
  "**/tests",
  # Packaging metadata
  "**/*.dist-info/INSTALLER",
  "**/*.dist-info/RECORD",
  "**/*.dist-info/WHEEL",
  # Console scripts
  "**/app_packages/bin/*",
]
console_app = false
use_full_install_path = false

permission.microphone = "The microphone will only be used when you tap the record button."
permission.camera = "Add-ons may access your camera."

[tool.briefcase.app.anki.macOS]
universal_build = false
min_os_version = "13.0"
entitlement."com.apple.security.cs.allow-jit" = true
entitlement."com.apple.security.cs.disable-executable-page-protection" = true
entitlement."com.apple.security.cs.allow-dyld-environment-variables" = true
entitlement."com.apple.security.device.audio-input" = true

[tool.briefcase.app.anki.linux.flatpak]
supported = false

[tool.briefcase.app.anki.windows]
icon = "resources/pgrep"

[tool.briefcase.app.anki.iOS]
supported = false

[tool.briefcase.app.anki.android]
supported = false

[tool.briefcase.app.anki.web]
supported = false

[tool.briefcase.app.anki.document_type.apkg]
description = "Deck package"
extension = "apkg"
icon = "resources/anki"
mime_type = "application/x-apkg"
url = "https://github.com/philote-dev/inka"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.anki.document_type.colpkg]
description = "Collection package"
extension = "colpkg"
icon = "resources/anki"
mime_type = "application/x-colpkg"
url = "https://github.com/philote-dev/inka"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.anki.document_type.ankiaddon]
description = "Add-on package"
extension = "ankiaddon"
icon = "resources/anki"
mime_type = "application/x-ankiaddon"
url = "https://github.com/philote-dev/inka"
macOS.CFBundleTypeRole = "Editor"
